# hypercortex

./: .gitignore  .nowignore  .pijulignore  Cargo.toml  Makefile  README.md  _task.zsh  buildNpmPackages.sh  lerna.json  now.json  package-lock.json  package.json
.github/workflows/: check-always.yaml  check-master.yaml  check-release.yaml  ci.yaml  publish-release.yaml
doc/: cli.md  getting-started.md  task.md
doc/cli/: intro.md
doc/community/: faq.md
doc/core/: config.md
engine/: Cargo.toml
engine/src/: error.rs  hyper_cortex_object_trait.rs  id.rs  interface.rs  lib.rs  prop.rs  runner.rs  tag.rs  task.rs
engine/src/engine/: mod.rs
engine/src/interface/: mod.rs  mutation.rs  prop.rs  query.rs
engine/src/primitives/: abstract_date.rs  id.rs  mod.rs  mutation.rs  parsing_error.rs  period.rs  prop.rs  query.rs  tag.rs
engine/src/task/: id.rs  mod.rs  period.rs  tag.rs
engine/tests/: integration.rs
hypertask_cli/: Cargo.toml
hypertask_cli/src/: context.rs  lib.rs  main.rs  render.rs
hypertask_cli/src/parse_args/: mod.rs
hypertask_engine/: Cargo.toml
hypertask_engine/src/: context.rs  engine.rs  id.rs  lib.rs  recur.rs  task.rs
hypertask_npm_package/: Cargo.toml
hypertask_npm_package/src/: lib.rs
hypertask_web_app/: Cargo.toml  index.html
hypertask_web_app/src/: lib.rs
js/: .babelrc  .gitignore  next-env.d.ts  package-lock.json  package.json  webpack.config.js
js/components/Button/: index.tsx
js/components/Editor/: index.js  styles.scss
js/components/EditorMain/: index.js  styles.css  styles.scss
js/components/EditorOutput/: index.js  styles.scss
js/components/EditorSetup/: index.js  styles.scss
js/components/Labeled/: index.js  styles.scss
js/components/Shell/: index.tsx
js/components/TextInput/: index.tsx
js/hooks/: index.js  useConfig.ts  useHyperTaskEngine.ts
js/pages/: config.tsx  index.tsx
js/sass/: _common.scss
js/src/: App.js  HypertaskContext.js  index.html  index.js
js/src/HypertaskContext/: index.js  syncDbWithServer.js
js/src/Task/: index.js
js/src/TaskList/: index.js
js/src/components/Config/: index.js
js/src/components/Modal/: index.js
js/src/components/QueryRenderer/: index.js
js/src/components/Tag/: index.js
js/src/components/Task/: index.js
js/src/components/TaskList/: index.js
js/src/components/Topbar/: index.js
js/src/useHyperTask/: getIDB.js  index.js  syncDbWithServer.js  useDataPersistence.js
js/static/: index.html
lambdas/hyperdb-gateway.com/: package-lock.json  package.json
pages/: _document.js  index.js
rust/: Cargo.toml  README.md
rust/hypertask_cli/: Cargo.toml
rust/hypertask_cli/src/: context.rs  lib.rs  main.rs  render.rs
rust/hypertask_cli/src/context/: mod.rs  run_string_as_shell_command.rs
rust/hypertask_cli/src/parse_args/: mod.rs
rust/hypertask_cli_context/: Cargo.toml
rust/hypertask_cli_context/src/: config_file.rs  config_for_use.rs  lib.rs
rust/hypertask_client_cli/: Cargo.toml
rust/hypertask_client_cli/src/: app_info.rs  auto_complete.rs  auto_complete_creator.rs  cli_stored_task.rs  config.rs  io.rs  lib.rs  render.rs
rust/hypertask_client_cli/src/context/: mod.rs  run_string_as_shell_command.rs
rust/hypertask_client_cli/src/parse_args/: mod.rs
rust/hypertask_client_js/: Cargo.toml  build.sh
rust/hypertask_client_js/src/: context.rs  lib.rs
rust/hypertask_config_file_opener/: Cargo.toml
rust/hypertask_config_file_opener/src/: lib.rs
rust/hypertask_engine/: Cargo.toml
rust/hypertask_engine/src/: engine.rs  error.rs  id.rs  lib.rs  prop.rs  recur.rs  rpn.rs  task.rs
rust/hypertask_engine/src/task/: conflict.rs  data.rs  finalise.rs  hash.rs  mod.rs  query_mutation.rs
rust/hypertask_npm_package/: Cargo.toml  build.sh  index.html
rust/hypertask_npm_package/src/: context.rs  lib.rs
rust/hypertask_rest_server/: Cargo.toml
rust/hypertask_rest_server/src/: main.rs
rust/hypertask_sync_cli_daemon/: Cargo.toml
rust/hypertask_sync_cli_daemon/src/: config.rs  lib.rs  main.rs
rust/hypertask_sync_client_cli/: Cargo.toml
rust/hypertask_sync_client_cli/src/: cli_args.rs  lib.rs  main.rs  persist.rs  sync_client_stored_task.rs
rust/hypertask_sync_daemon/: Cargo.toml
rust/hypertask_sync_daemon/src/: main.rs
rust/hypertask_sync_js_daemon/: Cargo.toml
rust/hypertask_sync_js_daemon/src/: lib.rs
rust/hypertask_sync_server/: Cargo.toml
rust/hypertask_sync_server/src/: cli_args.rs  config.rs  io.rs  lib.rs  main.rs  server.rs
rust/hypertask_sync_storage_with_server/: Cargo.toml
rust/hypertask_sync_storage_with_server/src/: lib.rs
rust/hypertask_task_io_operations/: Cargo.toml
rust/hypertask_task_io_operations/src/: cli.rs  lib.rs  wasm.rs
rust/render_simple_cli_table/: Cargo.toml
rust/render_simple_cli_table/src/: lib.rs
src/: engine.rs  error.rs  id.rs  lib.rs  main.rs  parse_args.rs  period.rs  prop.rs  recur.rs  render.rs  tag.rs  task.rs
src/parse_args/: mod.rs
task_cli/: Cargo.toml
task_cli/src/: lib.rs  main.rs
task_cli/src/parse_args/: command.rs  mod.rs
web/rpn-web-edit/: .gitignore  next.config.js  package-lock.json  package.json  rollup.config.js
web/rpn-web-edit/pages/: _document.js  index.js
web/rpn-web-edit/src/: theme.css
web/rpn-web-edit/src/components/: Editor.svelte  EditorInitialState.svelte  EditorInput.svelte  EditorOutput.svelte  EditorStackViewer.svelte  EditorTestTask.svelte
web/rpn-web-edit/src/components/Editor/: index.js  styles.css
web/rpn-web-edit/src/components/EditorMain/: index.js
web/rpn-web-edit/src/components/EditorSetup/: index.js  styles.css
web/rpn-web-edit/src/routes/: _layout.svelte  index.svelte
web/rpn-web-edit/static/: global.css
