[profile.release]
lto = "fat"
codegen-units = 1
rustflags = ["target-cpu=native", ]    # custom flags to pass to all compiler invocations

[workspace]
members = [
	"rust/render_simple_cli_table",
	"rust/hypertask_task_io_operations",
	"rust/hypertask_sync_storage_with_server",

	"rust/hypertask_engine",

	"rust/hypertask_client_cli",
	#"rust/hypertask_client_js",

	"rust/hypertask_sync_client_cli",
	"rust/hypertask_sync_server",
]
