[profile.release]
lto = "fat"
codegen-units = 1
rustflags = [ "target-cpu=native" ]    # custom flags to pass to all compiler invocations

[workspace]
members = [
	"packages/bin/client_cli",
	"packages/bin/client_js",
	"packages/bin/sync_client",
	"packages/bin/sync_server",
	"packages/lib/engine",
	"packages/lib/render_simple_cli_table",
	"packages/lib/sync_with_server",
	"packages/new_type/persisted_task_browser",
	"packages/new_type/persisted_task_client",
	"packages/new_type/persisted_task_server",
]
