[package]
name = "hypercortex_engine"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.8.0"
rand = "0.6.5" 
regex = "1"
serde = { version = "1.0", features = ["derive"] }
time = "0.1.42"
