[package]
name = "hypertask_npm_package"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hypertask_engine = { path = "../hypertask_engine" }
js-sys = "0.3.25"
lazy_static = "1.3.0"
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "1.0.40" 

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'IdbDatabase',
  'IdbFactory',
  'IdbObjectStore',
  'IdbObjectStoreParameters',
  'IdbOpenDbRequest',
  'IdbRequest',
  'IdbRequestReadyState',
  'Node',
  'Storage',
  'Window',
]
