[package]
name = "task_cli"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hypercortex_engine = { path = "../engine" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
