[package]
name = "hypertask_cli"
version = "0.1.2"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"
categories = [ "command-line-utilities" ]
description = "A cli task manager"
homepage = "https://github.com/FreddieRidell/hypertask"
keywords = [ "task", "todo", "cli" ]
license = "MIT"
repository = "https://github.com/FreddieRidell/hypertask"

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
ansi_term = "0.11"
chrono = { version = "0.4", features = ["serde"] }
hypertask_engine={ path= "../hypertask_engine" }
lazy_static = "1.3.0"
platform-dirs = "0.2.0"
rand = "0.6.5" 
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
time = "0.1.42"
mkdirp = "1.0.0"
