[package]
name = "hypertask_cli"
version = "0.2.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"
categories = [ "command-line-utilities" ]
description = "The CLI for hypertask task manager"
homepage = "https://github.com/FreddieRidell/hypertask"
keywords = [ "task", "todo", "cli" ]
license = "MIT"
repository = "https://github.com/FreddieRidell/hypertask"

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
ansi_term = "0.11"
chrono = { version = "0.4", features = ["serde"] }
hypertask_config_file_opener={ version = "0.2.0", path="../hypertask_config_file_opener"}
hypertask_engine={ version = "0.2.0", path= "../hypertask_engine" }
lazy_static = "1.3.0"
mkdirp = "1.0.0"
platform-dirs = "0.2.0"
rand = "0.6.5" 
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
shellexpand = "1.0.0"    # Shell-like expansions in strings
term_size = "1.0.0-beta1" 
time = "0.1.42"
toml = "0.5.1"   
