[package]
name = "hypertask_client_js"
version = "0.3.0-alpha.1"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"
description = "The WASM NPM package for hypertask task manager"
homepage = "https://github.com/FreddieRidell/hypertask"
keywords = [ "task", "todo", "wasm" ]
license = "MIT"
repository = "https://github.com/FreddieRidell/hypertask"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hypertask_engine = { version = "0.2.0", path = "../hypertask_engine" }
js-sys = "0.3.25"
lazy_static = "1.3.0"
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "1.0.40" 
wee_alloc = "0.4.5"  

[dependencies.rand]
version = "0.7.0"
features = ["small_rng"]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [ ]
