[package]
name = "hypertask_client_js"
version = "0.2.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"
description = "The WASM NPM package for hypertask task manager"
homepage = "https://github.com/FreddieRidell/hypertask"
keywords = [ "task", "todo", "wasm" ]
license = "MIT"
repository = "https://github.com/FreddieRidell/hypertask"

target="wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hypertask_engine = { version = "0.2.0", path = "../hypertask_engine" }
hypertask_task_io_operations = { version = "0.1.0", path = "../hypertask_task_io_operations" }
js-sys = "0.3"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1" 
wee_alloc = "0.4"  

[dependencies.rand]
version = "0.7"
features = ["small_rng"]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [ ]
