[package]
name = "hypertask_config_file_opener"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hypertask_engine={ path= "../hypertask_engine" }
platform-dirs = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = "0.5.1"   
