[package]
name = "hypertask_config_file_opener"
version = "0.2.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"
description = "A config file opening utility for hypertask"
homepage = "https://github.com/FreddieRidell/hypertask"
keywords = [ ]
license = "MIT"
repository = "https://github.com/FreddieRidell/hypertask"

[dependencies]
hypertask_engine={ version = "0.2.0", path= "../hypertask_engine" }
platform-dirs = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = "0.5.1"   
