[package]
name = "hypertask_engine"
version = "0.1.2"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.6.5" 
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0.59"
time = "0.1.42"
