[package]
name = "hypertask_engine"
version = "0.2.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"
description = "The core logic engine used to run hypertask"
keywords = [ "task", "todo", ]
license = "MIT"
homepage = "https://freddieridell.com/open-source/hyper-task"
repository = "https://github.com/FreddieRidell/hypertask/"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.6.5" 
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0.59"
time = "0.1.42"
