[package]
name = "hypertask_rest_server"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.7" 
clap = "2.33.0"
hypertask_engine = { path = "../hypertask_engine" }
rand = "0.7.0"  
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde_json = "1.0.40" 
