[package]
name = "hypertask_rest_server"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"


[dependencies]
chrono = "0.4.7" 
clap = "2.33.0"
hypertask_cli_context={path = "../hypertask_cli_context"}
hypertask_engine = { path = "../hypertask_engine" }
rand = "0.7.0"  
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde_json = "1.0.40" 
