[package]
name = "hypertask_sync_cli_daemon"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
hypertask_config_file_opener={ version = "0.2.0", path="../hypertask_config_file_opener"}
hypertask_engine={ version = "0.2.0", path= "../hypertask_engine" }
hypertask_task_io_operations={ version = "0.1.0", path="../hypertask_task_io_operations"}
platform-dirs = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
shellexpand = "1.0.0"    # Shell-like expansions in strings
surf = "1.0.3"
async-std = "1.1.0"
chrono = "0.4.10"
time = "0.1.42"
