[package]
name = "hypertask_sync_client_cli"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"

[[bin]]
name = "hypertask-sync-client"
path = "src/main.rs"

[dependencies]
daemonize = "0.4"
hypertask_config_file_opener={ version = "0.2.0", path="../hypertask_config_file_opener"}
hypertask_engine={ version = "0.2.0", path= "../hypertask_engine" }
hypertask_task_io_operations={ version = "0.1.0", path="../hypertask_task_io_operations"}
platform-dirs = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
shellexpand = "1"
surf = "1"
async-std = "1.1"
chrono = "0.4"
time = "0.1"
crossbeam-channel = "0.3"
notify = "=5.0.0-pre.1"
log = "0.4.8"
env_logger = "0.7.1"
futures = "0.3.4"

[dependencies.clap]
git = 'https://github.com/clap-rs/clap.git'
branch = 'master'
