[package]
name = "hypertask_sync_js_daemon"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hypertask_config_file_opener={ version = "0.2.0", path="../hypertask_config_file_opener"}
hypertask_engine={ version = "0.2.0", path= "../hypertask_engine" }
hypertask_sync_storage_with_server={ version = "0.1.0", path="../hypertask_sync_storage_with_server"}
hypertask_task_io_operations={ version = "0.1.0", path="../hypertask_task_io_operations"}
js-sys = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1" 
wee_alloc = "0.4"  
lazy_static = "1.4.0"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [ ]
