[package]
name = "hypertask_sync_server"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hypertask_config_file_opener={ version = "0.2.0", path="../hypertask_config_file_opener"}
hypertask_engine={ version = "0.2.0", path= "../hypertask_engine" }
rand = "0.6.5" 
platform-dirs = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
shellexpand = "1.0.0"    # Shell-like expansions in strings
