[package]
name = "hypertask_sync_storage_with_server"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
hypertask_engine={ version = "0.2.0", path= "../hypertask_engine" }
hypertask_task_io_operations={ version = "0.1.0", path="../hypertask_task_io_operations"}
time = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
futures = "0.3"
log = "0.4.8"

[dependencies.surf]
version = "1"
features = [ "native-client" ]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.34"
features = ["console"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1"
