[package]
name = "hypertask_task_io_operations"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hypertask_engine={ version = "0.2.0", path= "../hypertask_engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
